--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Sarthak Chadha\AppData\Local\Temp\testng-eclipse--992782434\testng-customsuite.xml</span>
+                    <span>C:\Users\Sarthak Chadha\AppData\Local\Temp\testng-eclipse-31261670\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.HomePageTest" hash-for-method="bookTicket">bookTicket</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.HomePageTest" hash-for-method="checkHeaderComponents">checkHeaderComponents</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.HomePageTest" hash-for-method="getTitleOfHomePage">getTitleOfHomePage</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,9 +130,16 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="bookTicket">
-                  </a> <!-- bookTicket -->
-                  <span class="method-name">bookTicket</span>
+                  <a name="checkHeaderComponents">
+                  </a> <!-- checkHeaderComponents -->
+                  <span class="method-name">checkHeaderComponents</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="getTitleOfHomePage">
+                  </a> <!-- getTitleOfHomePage -->
+                  <span class="method-name">getTitleOfHomePage</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +147,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Sarthak Chadha\AppData\Local\Temp\testng-eclipse--992782434\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Sarthak Chadha\AppData\Local\Temp\testng-eclipse-31261670\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -184,16 +196,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'bookTicket')
+data.setCell(0, 1, 'checkHeaderComponents')
 data.setCell(0, 2, 'test.HomePageTest')
-data.setCell(0, 3, 5089);
+data.setCell(0, 3, 619);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'getTitleOfHomePage')
+data.setCell(1, 2, 'test.HomePageTest')
+data.setCell(1, 3, 64);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 683 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -226,15 +242,23 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">launchURL</span>
-                <span class="method-start">3871 ms</span>
+                <span class="method-start">9211 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">bookTicket</span>
-                <span class="method-start">5448 ms</span>
+                <span class="method-name">checkHeaderComponents</span>
+                <span class="method-start">13476 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">launchURL</span>
+                <span class="method-start">14101 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">getTitleOfHomePage</span>
+                <span class="method-start">16981 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">10539 ms</span>
+                <span class="method-start">17048 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
