--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e8a876">  <td>20/10/24 14:08:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.checkHeaderComponents()[pri:0, instance:test.HomePageTest@5e5792a0]">checkHeaderComponents</td> 
+<tr bgcolor="e8a876">  <td>20/10/26 21:38:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.bookTicket()[pri:0, instance:test.HomePageTest@5e5792a0]">bookTicket</td> 
   <td>main@1938056729</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>20/10/24 14:08:41</td>   <td>3572</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestInitiator.closeBrowser()[pri:0, instance:test.HomePageTest@5e5792a0]">&lt;&lt;closeBrowser</td> 
+<tr bgcolor="a4fc66">  <td>20/10/26 21:38:16</td>   <td>14050</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestInitiator.closeBrowser()[pri:0, instance:test.HomePageTest@5e5792a0]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1938056729</td>   <td></td> </tr>
-<tr bgcolor="e8a876">  <td>20/10/24 14:08:41</td>   <td>3505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.getTitleOfHomePage()[pri:0, instance:test.HomePageTest@5e5792a0]">getTitleOfHomePage</td> 
-  <td>main@1938056729</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>20/10/24 14:08:24</td>   <td>-13468</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestInitiator.launchBrowser()[pri:0, instance:test.HomePageTest@5e5792a0]">&gt;&gt;launchBrowser</td> 
+<tr bgcolor="a4fc66">  <td>20/10/26 21:37:53</td>   <td>-9653</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestInitiator.launchBrowser()[pri:0, instance:test.HomePageTest@5e5792a0]">&gt;&gt;launchBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1938056729</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>20/10/24 14:08:34</td>   <td>-4265</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestInitiator.launchURL()[pri:0, instance:test.HomePageTest@5e5792a0]">&gt;&gt;launchURL</td> 
-<td>&nbsp;</td>  <td>main@1938056729</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>20/10/24 14:08:39</td>   <td>625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestInitiator.launchURL()[pri:0, instance:test.HomePageTest@5e5792a0]">&gt;&gt;launchURL</td> 
+<tr bgcolor="a4fc66">  <td>20/10/26 21:37:59</td>   <td>-3281</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestInitiator.launchURL()[pri:0, instance:test.HomePageTest@5e5792a0]">&gt;&gt;launchURL</td> 
 <td>&nbsp;</td>  <td>main@1938056729</td>   <td></td> </tr>
 </table>
