Updated Logs and Maven Config and listerners

--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,30 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9fba89">  <td>20/10/11 11:47:44</td>   <td>0</td> <td title="&gt;&gt;TestInitiator.launchBrowser()[pri:0, instance:test.BusHireTest@cb5822]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@837764579</td>   <td></td> </tr>
-<tr bgcolor="9fba89">  <td>20/10/11 11:47:53</td>   <td>8938</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestInitiator.launchURL()[pri:0, instance:test.BusHireTest@cb5822]">&gt;&gt;launchURL</td> 
-<td>&nbsp;</td>  <td>main@837764579</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>20/10/11 11:47:57</td>   <td>12149</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BusHireTest.getCurrentUR3()[pri:0, instance:test.BusHireTest@cb5822]">getCurrentUR3</td> 
-  <td>main@837764579</td>   <td></td> </tr>
-<tr bgcolor="9fba89">  <td>20/10/11 11:47:57</td>   <td>12165</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestInitiator.launchURL()[pri:0, instance:test.BusHireTest@cb5822]">&gt;&gt;launchURL</td> 
-<td>&nbsp;</td>  <td>main@837764579</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>20/10/11 11:48:01</td>   <td>16271</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BusHireTest.getCurrentURL1()[pri:0, instance:test.BusHireTest@cb5822]">getCurrentURL1</td> 
-  <td>main@837764579</td>   <td></td> </tr>
-<tr bgcolor="9fba89">  <td>20/10/11 11:48:01</td>   <td>16274</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestInitiator.launchURL()[pri:0, instance:test.BusHireTest@cb5822]">&gt;&gt;launchURL</td> 
-<td>&nbsp;</td>  <td>main@837764579</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>20/10/11 11:48:01</td>   <td>16350</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BusHireTest.getCurrentURL2()[pri:0, instance:test.BusHireTest@cb5822]">getCurrentURL2</td> 
-  <td>main@837764579</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>20/10/11 11:48:01</td>   <td>16355</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BusHireTest.getCurrentURL4()[pri:0, instance:test.BusHireTest@cb5822]">getCurrentURL4</td> 
-  <td>main@837764579</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>20/10/11 11:48:01</td>   <td>16367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BusHireTest.getTitle()[pri:0, instance:test.BusHireTest@cb5822]">getTitle</td> 
-  <td>main@837764579</td>   <td></td> </tr>
-<tr bgcolor="9fba89">  <td>20/10/11 11:48:01</td>   <td>16375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestInitiator.launchURL()[pri:0, instance:test.HomePageTest@4b9e13df]">&gt;&gt;launchURL</td> 
-<td>&nbsp;</td>  <td>main@837764579</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>20/10/11 11:48:01</td>   <td>16378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.bookTicket()[pri:0, instance:test.HomePageTest@4b9e13df]">bookTicket</td> 
-  <td>main@837764579</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>20/10/11 11:48:01</td>   <td>16383</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.getCurrentURL10()[pri:0, instance:test.HomePageTest@4b9e13df]">getCurrentURL10</td> 
-  <td>main@837764579</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>20/10/11 11:48:01</td>   <td>16395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.getCurrentURL9()[pri:0, instance:test.HomePageTest@4b9e13df]">getCurrentURL9</td> 
-  <td>main@837764579</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>20/10/31 12:11:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestInitiator.launchBrowser()[pri:0, instance:test.BusHireTest@26653222]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>20/10/31 12:11:16</td>   <td>8333</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestInitiator.launchURL()[pri:0, instance:test.BusHireTest@26653222]">&gt;&gt;launchURL</td> 
+<td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="e8a876">  <td>20/10/31 12:11:20</td>   <td>12409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BusHireTest.getTitle()[pri:0, instance:test.BusHireTest@26653222]">getTitle</td> 
+  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>20/10/31 12:11:20</td>   <td>12458</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestInitiator.closeBrowser()[pri:0, instance:test.BusHireTest@26653222]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>20/10/31 12:11:20</td>   <td>12461</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestInitiator.launchBrowser()[pri:0, instance:test.HomePageTest@3532ec19]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>20/10/31 12:11:27</td>   <td>19016</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestInitiator.launchURL()[pri:0, instance:test.HomePageTest@3532ec19]">&gt;&gt;launchURL</td> 
+<td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="a485d2">  <td>20/10/31 12:11:31</td>   <td>23345</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.bookTicket()[pri:0, instance:test.HomePageTest@3532ec19]">bookTicket</td> 
+  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>20/10/31 12:11:44</td>   <td>36673</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestInitiator.closeBrowser()[pri:0, instance:test.HomePageTest@3532ec19]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
 </table>
